:sparkles: get a geopoint
